
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
char toupper(char c)
{
  return ((c >= 'a' && c <= 'z') ? c - 32: c);
}
